# TM-DocScanner

./: CMakeLists.txt  README.md  main.cpp  presentation.py
lib/: binarization.cpp  binarization.h  corners.cpp  corners.h  image_statistics.cpp  image_statistics.h  page_frame.cpp  page_frame.h  pipeline.cpp  pipeline.h  pre_processing.cpp  pre_processing.h  processing.cpp  processing.h  utility.cpp  utility.h
